Tests are running again, had to add --add-modules org.junit during compilation, otherwise JUnit was not part of the resolved modules