@@ -1,12 +1,13 @@
 ./build.sh
-rm -rf mods-test
+rm -rf mod-test
 
 javac -Xmodule:easytext.algorithm.naivesyllablecounter \
+      --add-modules org.junit \
       --add-reads easytext.algorithm.naivesyllablecounter=org.junit \
       --module-path mods:lib-test \
-      -d mods-test/easytext.algorithm.naivesyllablecounter $(find src-test -name '*.java')
+      -d mod-test $(find src-test -name '*.java')
 
-java --patch-module easytext.algorithm.naivesyllablecounter=mods-test \
+java --patch-module easytext.algorithm.naivesyllablecounter=mod-test \
      --add-reads easytext.algorithm.naivesyllablecounter=org.junit \
      --add-exports easytext.algorithm.naivesyllablecounter/javamodularity.easytext.algorithm.naivesyllablecounter=org.junit \
      --module-path mods:lib-test \
